add JaCoCo for coverage -P3

--- a/SimpleWebServer/www/res/acc/test.html
+++ b/SimpleWebServer/www/res/acc/test.html
@@ -1,4 +1,4 @@
-<head><link rel="icon" type="image/png" href="/favicon.png"/>
+<head><link rel="icon" href="/Users/ll2020/CS371/Programs/SimpleWebServer/www/res/acc/favicon.png" type="image/png" />
 </head>
 <body>
 <p><img src="cat.jpeg"></p>
